--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -12,7 +12,12 @@ BUILDDIR      = build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+# Publishing target (see https://github.com/sphinx-doc/sphinx/issues/3382#issuecomment-470772316)
+github:
+	@make html
+	@cp -a "$(BUILDDIR)/html/." "../docs"
+
+.PHONY: help Makefile github
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
