--- a/dbnc/example.yaml
+++ b/dbnc/example.yaml
@@ -5,19 +5,26 @@
     #
     # Size of training sample to use for feature extraction and
     # discretization; this defines the `training data' below:
-    bn_abstr_train_size: 1000,
+    bn_abstr_train_size: 10000,
     #
+    # Proportion of the training data (above) to use for feature
+    # extraction (defaults to 1, i.e. use all of it).
+    # feat_extr_train_size: 0.5,
     # 
     # Feature Extraction (for each layer)
     # ===================================
     #
-    # Note that `decomp: "PCA"' is optional as it's the default.
+    # Note that `decomp: "PCA"' is optional as it is the default.
+    #
+    # PCA: Use 3 components with randomized SVD algorithm (Note:
+    # usually quite efficient, yet may impair the generatation of test
+    # cases via the LP-based algorithm):
+    # feats: { decomp: 'pca', n_components: 3, svd_solver: 'randomized' },
     # 
-    # PCA: Use 3 components with randomized SVD algorithm:
-    feats: { decomp: 'pca', n_components: 3, svd_solver: 'randomized' },
-    # 
-    # PCA: Use 5 components with exact algorthm (potentially slower):
-    # feats: { decomp: 'pca', n_components: 5, svd_solver: 'full' },
+    # PCA: Use 5 components with exact algorthm (potentially slower,
+    # but yields exact inverse transformation---needed for LP-based
+    # test case generation):
+    feats: { decomp: 'pca', n_components: 5, svd_solver: 'full' },
     #
     # PCA: Use 5 components and guess a good algorithms based on size
     # of training data:
@@ -42,6 +49,9 @@
     # layer index as argument, and returns any of the specification
     # dictonaries as above:
     # feats: '(lambda li: 3 if li <= 2 else 4)',
+    #
+    # As above, returing minimum captured variance instead:
+    # feats: '(lambda li: 0.9 if li > 5 else 0.7 if li > 4 else 0.5 if li > 2 else 0.1)',
     #
     # Hybrid: Use ICA(3) for the three first layers, PCA(4) elsewhere:
     # feats: '(lambda li: { "decomp": "ica", "n_components": 3 } if li <= 2 else { "n_components": 4 })',
